update current files